--- a/app.json
+++ b/app.json
@@ -15,14 +15,14 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "app.rork.event-discovery-ticketing"
+      "bundleIdentifier": "app.rork.eventdiscoveryticketing"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "app.rork.event-discovery-ticketing",
+      "package": "app.rork.eventdiscoveryticketing",
       "permissions": [
         "android.permission.VIBRATE"
       ]
