--- a/package.json
+++ b/package.json
@@ -3,10 +3,36 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "bunx rork start -p ymdyavook1g37hbo1un7r --tunnel",
-    "start-web": "bunx rork start -p ymdyavook1g37hbo1un7r --web --tunnel",
-    "start-web-dev": "DEBUG=expo* bunx rork start -p ymdyavook1g37hbo1un7r --web --tunnel",
-    "lint": "expo lint"
+    "start": "expo start --dev-client",
+    "start:tunnel": "expo start --tunnel --clear",
+    "start:lan": "./scripts/start-dev.sh --lan",
+    "start:localhost": "./scripts/start-dev.sh --localhost",
+    "start:web": "expo start --web --tunnel",
+    "start:web-dev": "DEBUG=expo* expo start --web --tunnel",
+    "start:clean": "./scripts/start-dev.sh --clear",
+    "dev": "npm run start",
+    "android": "expo run:android",
+    "android:device": "expo run:android --device",
+    "ios": "expo run:ios",
+    "ios:device": "expo run:ios --device",
+    "build:dev": "eas build --profile development",
+    "build:preview": "eas build --profile preview",
+    "build:production": "eas build --profile production",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "format": "prettier --write .",
+    "format:docs": "prettier --write \"docs/**/*.md\"",
+    "format:check": "prettier --check .",
+    "docs:serve": "mkdocs serve",
+    "docs:build": "mkdocs build",
+    "docs:deploy": "mkdocs gh-deploy",
+    "reset": "expo r -c && npm run start:clean",
+    "tunnel": "npm run start:tunnel",
+    "setup": "./scripts/setup.sh",
+    "diagnose": "./scripts/diagnose.sh",
+    "dev:setup": "npm run setup && npm run start",
+    "dev:diagnose": "npm run diagnose"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -32,16 +58,16 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.6",
     "expo-web-browser": "^14.2.0",
-    "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.1",
+    "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "5.3.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0",
     "zustand": "^5.0.2"
   },
@@ -49,6 +75,7 @@
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.0",
     "@types/react": "~19.0.10",
+    "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.31.0",
     "eslint-config-expo": "^9.2.0",
     "typescript": "~5.8.3"
