pre-migration try

--- a/ios/EventDiscoveryTicketing/Info.plist
+++ b/ios/EventDiscoveryTicketing/Info.plist
@@ -28,7 +28,13 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>myapp</string>
-          <string>app.rork.eventdiscoveryticketing</string>
+          <string>app.eventdiscoveryticketing</string>
+        </array>
+      </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>exp+event-discovery-ticketing</string>
         </array>
       </dict>
     </array>
@@ -61,6 +67,8 @@
     <array>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
     </array>
+    <key>RCTNewArchEnabled</key>
+    <true/>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
