--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'app.rork.eventdiscoveryticketing'
+    namespace 'app.eventdiscoveryticketing'
     defaultConfig {
-        applicationId 'app.rork.eventdiscoveryticketing'
+        applicationId 'app.eventdiscoveryticketing'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
