--- a/app.json
+++ b/app.json
@@ -1,43 +1,38 @@
 {
+  "name": "EventDiscoveryTicketing",
+  "displayName": "Event Discovery & Ticketing",
   "expo": {
     "name": "Event Discovery & Ticketing",
     "slug": "event-discovery-ticketing",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "src/assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/splash-icon.png",
+      "image": "src/assets/images/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "app.rork.eventdiscoveryticketing"
+      "bundleIdentifier": "app.eventdiscoveryticketing"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "src/assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "app.rork.eventdiscoveryticketing",
+      "package": "app.eventdiscoveryticketing",
       "permissions": [
         "android.permission.VIBRATE"
       ]
     },
     "web": {
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "src/assets/images/favicon.png"
     },
-    "plugins": [
-      [
-        "expo-router",
-        {
-          "origin": "https://rork.com/"
-        }
-      ]
-    ],
+    "plugins": [],
     "experiments": {
       "typedRoutes": true
     }
