--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,11 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
   ],
-  "extends": "expo/tsconfig.base"
+    "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ]
 }
