--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.6",
     "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-location": "~18.1.4",
     "expo-router": "~5.0.3",
@@ -63,6 +62,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "5.3.0",
     "react-native-screens": "~4.10.0",
