feat: Replaced Expo router to React Navigation (open source)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,7 @@
         "./*"
       ]
     },
-    "types": [
-      "expo-router/types"
-    ],
+    "types": [],
     "ignoreDeprecations": "6.0"
   },
   "include": [
