--- a/app.json
+++ b/app.json
@@ -30,11 +30,7 @@
     "web": {
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      [
-        "expo-router"
-      ]
-    ],
+    "plugins": [],
     "experiments": {
       "typedRoutes": true
     }
