--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "15.11.2",
+    "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0",
