fix: Network observer logic refactor, Added snackbar for UX.  Infinite scroll flag to able to load due to intermittent network connection.

--- a/app.json
+++ b/app.json
@@ -15,7 +15,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "app.eventdiscoveryticketing"
+      "bundleIdentifier": "app.eventdiscoveryticketing",
+      "entitlements": {
+      "com.apple.developer.networking.wifi-info": true
+    }
     },
     "android": {
       "adaptiveIcon": {
