--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nkzw/create-context-hook": "^1.1.0",
     "@notifee/react-native": "9.1.8",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^23.4.1",
     "@react-native-firebase/messaging": "^23.4.1",
