--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@notifee/react-native": "9.1.8",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/datetimepicker": "^8.5.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^23.4.1",
     "@react-native-firebase/messaging": "^23.4.1",
@@ -51,6 +52,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.83.0",
     "@ungap/structured-clone": "^1.3.0",
+    "date-fns": "^4.1.0",
     "expo": "^53.0.4",
     "expo-linking": "~7.1.4",
     "lottie-react-native": "^7.3.4",
@@ -61,8 +63,10 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-haptic-feedback": "^2.3.3",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.14.5",
+    "react-native-permissions": "^5.4.2",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
