--- a/android(oldv2)/build.gradle
+++ b/android(oldv2)/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     classpath('com.android.tools.build:gradle')
     classpath('com.facebook.react:react-native-gradle-plugin')
     classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
+    classpath('com.google.gms:google-services:4.4.4')
   }
 }
 
@@ -30,6 +31,8 @@ allprojects {
     google()
     mavenCentral()
     maven { url 'https://www.jitpack.io' }
+    maven { url '../../node_modules/@notifee/react-native/android/libs' }
+
   }
 }
 
