--- a/package.json
+++ b/package.json
@@ -1,40 +1,20 @@
 {
-  "name": "expo-app",
-  "main": "index.js",
+  "name": "event-discovery-ticketing",
   "version": "1.0.0",
+  "private": true,
+  "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "start:tunnel": "expo start --tunnel --clear",
-    "start:lan": "./scripts/start-dev.sh --lan",
-    "start:localhost": "./scripts/start-dev.sh --localhost",
-    "start:web": "expo start --web --tunnel",
-    "start:web-dev": "DEBUG=expo* expo start --web --tunnel",
-    "start:clean": "./scripts/start-dev.sh --clear",
-    "dev": "npm run start",
-    "android": "expo run:android",
-    "android:device": "expo run:android --device",
-    "ios": "expo run:ios",
-    "ios:device": "expo run:ios --device",
-    "run:ios-offline": "bash scripts/run-ios-offline.sh",
-    "build:dev": "eas build --profile development",
-    "build:preview": "eas build --profile preview",
-    "build:production": "eas build --profile production",
-    "release:ios": "bash scripts/release-ios.sh",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "android:device": "react-native run-android --device",
+    "ios:device": "react-native run-ios --device",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "format": "prettier --write .",
-    "format:docs": "prettier --write \"docs/**/*.md\"",
     "format:check": "prettier --check .",
-    "docs:serve": "mkdocs serve",
-    "docs:build": "mkdocs build",
-    "docs:deploy": "mkdocs gh-deploy",
-    "reset": "expo r -c && npm run start:clean",
-    "tunnel": "npm run start:tunnel",
-    "setup": "./scripts/setup.sh",
-    "diagnose": "./scripts/diagnose.sh",
-    "dev:setup": "npm run setup && npm run start",
-    "dev:diagnose": "npm run diagnose"
+    "reset": "react-native start --reset-cache"
   },
   "dependencies": {
     "@nkzw/create-context-hook": "^1.1.0",
@@ -53,13 +33,11 @@
     "@tanstack/react-query": "^5.83.0",
     "@ungap/structured-clone": "^1.3.0",
     "date-fns": "^4.1.0",
-    "expo": "^53.0.4",
-    "expo-linking": "~7.1.4",
     "lottie-react-native": "^7.3.4",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "^0.79.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-haptic-feedback": "^2.3.3",
@@ -68,6 +46,7 @@
     "react-native-paper": "^5.14.5",
     "react-native-permissions": "^5.4.2",
     "react-native-qrcode-svg": "^6.3.15",
+    "react-native-quick-base64": "^2.2.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-splash-screen": "^3.3.0",
@@ -75,17 +54,18 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.20.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@react-native-community/cli": "^20.0.2",
+    "@react-native-community/cli": "^18.0.0",
+    "@react-native-community/cli-platform-android": "18.0.0",
+    "@react-native-community/cli-platform-ios": "18.0.0",
+    "@react-native/metro-config": "^0.82.1",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.31.0",
-    "eslint-config-expo": "^9.2.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "typescript": "~5.8.3"
-  },
-  "private": true
+  }
 }
