--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,6 +8,7 @@ project.ext.vectoricons = [
         'MaterialIcons.ttf',
         'FontAwesome.ttf',
         'Ionicons.ttf',
+        'Feather.ttf',
     ]
 ]
 
