--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "19.0.0",
     "react-native": "^0.79.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-image-picker": "^8.2.1",
