--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "^3.0.0",
@@ -67,6 +68,7 @@
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "babel-jest": "^30.2.0",
