--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:coverage": "jest --coverage",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "reset": "react-native start --reset-cache"
+    "reset": "react-native start --reset-cache",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@nkzw/create-context-hook": "^1.1.0",
