--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "reset": "react-native start --reset-cache",
+    "lint": "eslint .",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
@@ -64,17 +65,25 @@
     "@react-native-community/cli": "^18.0.0",
     "@react-native-community/cli-platform-android": "18.0.0",
     "@react-native-community/cli-platform-ios": "18.0.0",
+    "@react-native/eslint-config": "^0.82.1",
     "@react-native/metro-config": "^0.82.1",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
+    "@types/eslint": "^8.56.12",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
     "babel-jest": "^30.2.0",
     "ci-info": "^3.8.0",
-    "eslint": "^9.31.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-ft-flow": "^3.0.11",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-native": "^5.0.0",
     "jest": "^30.2.0",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
