--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,45 +1,52 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "lib": [
-      "ESNext",
-      "DOM"
-    ],
-    "allowJs": true,
-    "jsx": "react-jsx",
-    "moduleResolution": "node",
     "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": false,
+    "module": "ESNext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "isolatedModules": true,
+    "allowJs": true,
+    "checkJs": false,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "noEmit": true,
+    "forceConsistentCasingInFileNames": true,
+    "target": "ESNext",
+    "lib": ["ESNext"],
+    "jsx": "react-native",
+    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    },
-    "types": [
-      "jest"
-    ], 
-    "ignoreDeprecations": "6.0"
+      "@/*": ["src/*"]
+    }
   },
-  "include": [
-    "src/**/*.ts", 
-    "src/**/*.tsx", 
-    "index.js", 
-    "App.tsx"
-  ],
+  "include": ["src/**/*", "index.js", "App.tsx"],
   "exclude": [
     "node_modules",
     "babel.config.js",
-    "jest.config.js"
-  ], 
- "engines": {
-    "node": ">=18"
-  },
- "extends": "@react-native/typescript-config/tsconfig.json"
+    "metro.config.js",
+    "jest.config.js",
+    "jest.setup.js",
+    "__tests__",
+    "coverage",
+    "android",
+    "ios"
+  ]
 }
-
