--- a/package.json
+++ b/package.json
@@ -89,6 +89,16 @@
     "jest": "^30.2.0",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
